feat: Java 17 + record + markdown generation